Update migrate-to-java11.md